--- a/client/src/components/sidebar.css
+++ b/client/src/components/sidebar.css
@@ -16,10 +16,12 @@
     font-size: 17px;
     width: 100%;
     color: grey;
+    padding: 14px 0;
+    display: block;
 }
 
 .sidebar ul li{
-    padding: 14px;
+    padding: 0 14px;
     cursor: pointer;
     text-align: start;
     transition: 0.5s;
