--- a/client/src/features/Create/style.css
+++ b/client/src/features/Create/style.css
@@ -27,7 +27,19 @@
     grid-column: 1/3;
     margin: 0;
     margin-bottom: 20px;
-    
+}
+
+.backto-home{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #5900ff;
+    color: #fff;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 20px;
+    border-radius: 4px;
 }
 
 .form-container form input,
@@ -60,4 +72,5 @@
     outline: 0;
     border-radius: 4px;
     width: 160px;
+    font-size: 18px;
 }
