--- a/client/src/features/View/style.css
+++ b/client/src/features/View/style.css
@@ -10,6 +10,22 @@
     margin-top: 20px;
 }
 
+.search-bar{
+    width: 100%;
+    margin-bottom: 36px;
+}
+
+.search-bar input{
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    outline: 0;
+    border: 1px solid #e4e4e4;
+    font-size: 15px;
+    background-color: #eeeeee;
+}
+
 .cards{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
