--- a/client/src/components/sidebars/sidebar.css
+++ b/client/src/components/sidebars/sidebar.css
@@ -27,10 +27,27 @@
     transition: 0.5s;
 }
 
+.right-side-bar ul li:first-child{
+    padding: 0;
+}
+
 .sidebar ul li:hover{
     border-radius: 10px;
     background-color: #ffffff;
     transform: scale(1.05);
     box-shadow: 0 0 10px #bebebe;
+    font-weight: bold;
+}
+
+.disconnect-btn{
+    background-color: #5900ff;
+    color: #fff !important;
+    font-size: 16px;
+    width: 100%;
+    outline: 0;
+    border-radius: 10px;
+    padding: 12px;
+    cursor: pointer;
+    border: 0;
     font-weight: bold;
 }
