--- a/client/src/features/View/style.css
+++ b/client/src/features/View/style.css
@@ -13,10 +13,23 @@
 .search-bar{
     width: 100%;
     margin-bottom: 36px;
+    display: flex;
+    align-items: center;
+    column-gap: 16px;
+    justify-content: space-between;
+}
+
+.search-bar h1{
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    white-space: nowrap
 }
 
 .search-bar input{
-    width: 100%;
+    width: 40%;
     padding: 10px;
     border-radius: 4px;
     box-sizing: border-box;
@@ -24,6 +37,11 @@
     border: 1px solid #e4e4e4;
     font-size: 15px;
     background-color: #eeeeee;
+    transition: 0.5s;
+}
+
+.search-bar input:focus{
+    width: 100%;
 }
 
 .cards{
