--- a/client/src/components/sidebars/sidebar.css
+++ b/client/src/components/sidebars/sidebar.css
@@ -8,11 +8,6 @@
     height: calc(100vh - 40px);
 }
 
-.left-side-bar{
-    background: linear-gradient(#62ffbe, #7dbaff);
-    height: calc(100vh - 40px);
-}
-
 .sidebar ul li a{
     font-size: 17px;
     width: 100%;
@@ -68,6 +63,17 @@
     overflow: hidden;
     text-overflow: ellipsis;
     width: 200px;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.acc-details .balance{
+    text-align: start;
+    margin-top: 6px !important;
+    color: #5900ff;
+    font-weight: bold;
 }
 
 
