--- a/client/src/features/LandingPage/style.css
+++ b/client/src/features/LandingPage/style.css
@@ -7,9 +7,20 @@
     border-bottom: 2px solid #e0e0e0;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding: 0 26px;
+}
+
+.navs .links{
+    display: flex;
+    align-items: center;
     column-gap: 20px;
+}
+
+.navs .logo{
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
 }
 
 .header{
@@ -50,4 +61,12 @@
     border-radius: 4px;
     color: #fff;
     background-color: #5900ff;
+}
+
+.login-btn{
+    background-color: #5900ff;
+    color: #fff;
+    padding: 6px 12px;
+    border-radius: 4px;
+    cursor: pointer;
 }
